--- a/FaceTek/Base.lproj/LaunchScreen.storyboard
+++ b/FaceTek/Base.lproj/LaunchScreen.storyboard
@@ -16,20 +16,32 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Version 1.0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sdy-3w-Cpr">
-                                <rect key="frame" x="87" y="436" width="200" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Version 1.0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sdy-3w-Cpr">
+                                <rect key="frame" x="87" y="436" width="200" height="40"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="iao-J9-aoy"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="facetek_titleNew.png" translatesAutoresizingMaskIntoConstraints="NO" id="hyU-av-3fp">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="splashScreenLogo.png" translatesAutoresizingMaskIntoConstraints="NO" id="hyU-av-3fp">
                                 <rect key="frame" x="87" y="261" width="200" height="145"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="145" id="y3D-Fi-kzd"/>
+                                </constraints>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" red="0.050980392159999999" green="0.2156862745" blue="0.57254901960000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="hyU-av-3fp" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="87" id="FxZ-TY-U5i"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="sdy-3w-Cpr" secondAttribute="trailing" constant="88" id="MkZ-Bf-bmT"/>
+                            <constraint firstItem="sdy-3w-Cpr" firstAttribute="top" secondItem="hyU-av-3fp" secondAttribute="bottom" constant="30" id="OGL-eE-b4g"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="hyU-av-3fp" secondAttribute="trailing" constant="88" id="Wot-nW-RWs"/>
+                            <constraint firstItem="sdy-3w-Cpr" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="87" id="bLM-4B-y51"/>
+                            <constraint firstItem="hyU-av-3fp" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="261" id="rxs-OV-Ggd"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
@@ -39,6 +51,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="facetek_titleNew.png" width="1042" height="1042"/>
+        <image name="splashScreenLogo.png" width="333.60000610351562" height="333.60000610351562"/>
     </resources>
 </document>
